added videos and index

--- a/shakouri/hamid-and-farah/index.html
+++ b/shakouri/hamid-and-farah/index.html
@@ -8,6 +8,26 @@
         <link href="../../lib/video-js.css" rel="stylesheet" />
         <script src="../../lib/videojs-ie8.min.js"></script>
     </head>
+    <style>
+        html {
+            padding: 0;
+            margin: 0;
+            width: 100%;
+            min-height: 100%;
+        }
+        body {
+            padding: 0;
+            margin: 0;
+            width: 100%;
+            min-height: 100%;
+        }
+        video {
+            display: block;
+            min-height: 100%;
+            min-width: 100%;
+            width: auto;
+        }
+    </style>
 </head>
 <body>
   <video
@@ -17,11 +37,11 @@
   preload="auto"
   width="640"
   height="264"
-  poster="./hamid-and-farah-poster.jpg"
+  poster="./farah-and-hamidreza.jpg"
   data-setup="{}"
 >
-  <source src="./farahandhamidreza.mp4" type="video/mp4" />
-  <source src="./farahandhamidreza.mp4" type="video/webm" />
+  <source src="./farah-and-hamidreza.mp4" type="video/mp4" />
+  <source src="./farah-and-hamidreza.webm" type="video/webm" />
   <p class="vjs-no-js">
     To view this video please enable JavaScript, and consider upgrading to a
     web browser that
