--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Remembering Beloeved Ones</h1>
-    <a href="./shakouri/hamid-and-farah/index.html">Farah and Hamidreza Shakouri</a>
+    <a href="./shakouri/">Shakouri</a>
 </body>
 </html>
