--- a/shakouri/index.html
+++ b/shakouri/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Beloved ones</title>
+</head>
 <body>
-<h1>Beloved ones</h1>
-<p>Hamd reza and Farah Shakouri</p>
+    <h1>Remembering Beloeved Ones</h1>
+    <a href="./farah-and-hamidreza/">Farah and Hamidreza Shakouri</a>
 </body>
 </html>
