--- a/shakouri/farah-and-hamidreza/index.html
+++ b/shakouri/farah-and-hamidreza/index.html
@@ -8,51 +8,57 @@
         <link href="../../lib/video-js.css" rel="stylesheet" />
         <script src="../../lib/videojs-ie8.min.js"></script>
         <script src="../../lib/video.min.js"></script>
-        <script src="../../lib/qrcode.min.js"></script>
+        <!-- <script src="../../lib/qrcode.min.js"></script> -->
         <style>
             html {
-                padding: 0;
-                margin: 0;
-                width: 100%;
-                min-height: 100%;
+              width: 100%;
+              height: 100%;
+              background-color: black;
             }
             body {
+              width: 100%;
+              height: 100%;
                 padding: 0;
-                margin: 0;
-                width: 100%;
-                min-height: 100%;
             }
-            video {
-                display: block;
-                min-height: 100%;
-                min-width: 100%;
-                width: auto;
+            .video-container {
+              display: block;
+              width: 100%;
+              height: 100%;
+              position: relative;
+              place-content: center;
+              place-items: center;
+            }
+
+            .video-js {
+              display: block;
+              width: auto !important;
+              height: 100% !important;
             }
         </style>
     </head>
 </head>
 <body>
-  <video
-    id="hamid-and-farah"
-    class="video-js"
-    controls
-    preload="auto"
-    width="640"
-    height="264"
-    poster="./farah-and-hamidreza.jpg"
-    data-setup="{}"
-  >
-  <source src="./farah-and-hamidreza.mp4" type="video/mp4" />
-  <source src="./farah-and-hamidreza.webm" type="video/webm" />
-  <p class="vjs-no-js">
-    To view this video please enable JavaScript, and consider upgrading to a
-    web browser that
-    <a href="https://videojs.com/html5-video-support/" target="_blank"
-      >supports HTML5 video</a
+  <div class="video-container">
+    <video
+      id="hamid-and-farah"
+      class="video-js"
+      controls
+      preload="auto"
+      poster="./farah-and-hamidreza.jpg"
+      data-setup="{}"
     >
-  </p>
-  <div id="qr-reader-results"></div>
-</video>
-<script src="./qrcode.js"></script>
+      <source src="./farah-and-hamidreza.mp4" type="video/mp4" />
+      <source src="./farah-and-hamidreza.webm" type="video/webm" />
+      <p class="vjs-no-js">
+        To view this video please enable JavaScript, and consider upgrading to a
+        web browser that
+        <a href="https://videojs.com/html5-video-support/" target="_blank"
+          >supports HTML5 video</a
+        >
+      </p>
+      <div id="qr-reader-results"></div>
+    </video>
+  </div>
+<!-- <script src="./qrcode.js"></script> -->
 </body>
 </html>
