--- a/shakouri/farah-and-hamidreza/index.html
+++ b/shakouri/farah-and-hamidreza/index.html
@@ -45,6 +45,7 @@
       controls
       preload="auto"
       poster="./farah-and-hamidreza.jpg"
+      autoplay
       data-setup="{}"
     >
       <source src="./farah-and-hamidreza.mp4" type="video/mp4" />
