--- a/shakouri/farah-and-hamidreza/index.html
+++ b/shakouri/farah-and-hamidreza/index.html
@@ -6,6 +6,7 @@
     <title>Hamid and Farah Shakouri</title>
     <head>
         <link href="../../lib/video-js.css" rel="stylesheet" />
+        <link href="./citytheme.css" rel="stylesheet" />
         <script src="../../lib/videojs-ie8.min.js"></script>
         <script src="../../lib/video.min.js"></script>
         <!-- <script src="../../lib/qrcode.min.js"></script> -->
@@ -45,7 +46,7 @@
       controls
       preload="auto"
       poster="./farah-and-hamidreza.jpg"
-      autoplay
+      autoplay="true"
       data-setup="{}"
     >
       <source src="./farah-and-hamidreza.mp4" type="video/mp4" />
@@ -60,6 +61,23 @@
       <div id="qr-reader-results"></div>
     </video>
   </div>
+  <script>
+    var player = videojs('hamid-and-farah');
+
+    player.ready(function() {
+      var promise = player.play();
+
+      if (promise !== undefined) {
+        promise.then(function() {
+          // Autoplay started!
+        }).catch(function(error) {
+          // Autoplay was prevented.
+        });
+      }
+    });
+    // videojs('player', {autoplay: true});
+    // document.getElementById('hamid-and-farah').play();
+  </script>
 <!-- <script src="./qrcode.js"></script> -->
 </body>
 </html>
